# step-parser-cpp

./: .gitignore  CMakeLists.txt  FileReader.h  README.md  StringUtils.cpp  StringUtils.h  VectorUtils.h  main.cpp
app/: main.cpp
app/configs/: stepReaderConfig.cpp
files/: MBA_N.STP  my-format-example.vz  vz-format-info.vz
modules/: Expression.h  ExpressionParser.cpp  ExpressionParser.h  ExpressionsDataStepExtractor.cpp  ExpressionsDataStepExtractor.h  SectionStepExtractor.h  StepReaderConfig.h  StringUtils.h
modules/checkers/: AbstractChecker.cpp  AbstractChecker.h  ExpressionChecker.cpp  ExpressionChecker.h  IsObjectExpressionChecker.cpp  IsObjectExpressionChecker.h  IsSimpleExpressionChecker.cpp  IsSimpleExpressionChecker.h
modules/converters/: ExpressionToJsonConverter.cpp  ExpressionToJsonConverter.h  ExpressionToVzConverter.h
modules/extractors/: AbstractArgumentsExtractor.cpp  AbstractArgumentsExtractor.h  ObjectArgumentsExtractor.cpp  ObjectArgumentsExtractor.h  ObjectExpressionArgumentsExtractor.cpp  SectionStepExtractor.h  SimpleExpressionArgumentsExtractor.cpp  SimpleExpressionArgumentsExtractor.h
modules/parsers/: AbstractParser.cpp  EqualityParser.cpp  EqualityParser.h  ExpressionParser.cpp  ExpressionParser.h  ObjectExpressionParser.cpp  ObjectExpressionParser.h  SimpleExpressionParser.cpp  SimpleExpressionParser.h
modules/readers/: FileReader.cpp
modules/structures/: ConverterConfig.h  Expression.h  StepReaderConfig.h  VzConfig.h
modules/system/: FileWorker.cpp  FileWorker.h
modules/utils/: StringUtils.cpp  StringUtils.h  VectorUtils.h  (+1 more)
(+48 files in other folders)
